# TimeMaster

./: .gitignore  BUILD_MAC.md  BUILD_WINDOWS.md  CHANGES_V4.md  CHANGES_V4_3.md  CHANGES_V4_4.md  CMakeLists.txt  README.md  WORK_RECORD.md  build_windows.bat  installer.iss  实验报告.docx
V3.0/: .gitignore  CMakeLists.txt  README.md  项目结构说明.md
V3.0/src/: main.cpp
V3.0/src/core/: Database.h  DeepSeekClient.cpp  DeepSeekClient.h
V3.0/src/ui/: AiHistoryDialog.h  AnalyticsPage.cpp  AnalyticsPage.h  ChatPage.cpp  MainWindow.cpp  MonthView.h  SettingsDialog.cpp  SettingsDialog.h  Sidebar.cpp  Theme.h  TimeGridView.h
V3.0/src/ui/widgets/: DailyTrendChart.h  HorizontalBarChart.cpp  InsightsWidget.cpp  InsightsWidget.h  RhythmCardWidget.h
assets/: app.qrc  app.rc
assets/fonts/: README.md
claude/: CMakeLists-additions.txt  README.md
claude/scripts/: make_icns.sh
claude/src/ui/: AnalyticsPage.cpp  AnalyticsPage.h
claude/src/ui/widgets/: DailyTrendChart.cpp  DailyTrendChart.h  HorizontalBarChart.cpp  HorizontalBarChart.h  InsightsWidget.cpp  InsightsWidget.h  RhythmCardWidget.cpp  RhythmCardWidget.h  SourceDistributionWidget.cpp  SourceDistributionWidget.h  StatsCardsWidget.cpp  StatsCardsWidget.h
database/: README.md
src/: main.cpp
src/core/: Database.cpp  Database.h  DeepSeekClient.cpp  DeepSeekClient.h  I18n.cpp  I18n.h  Preferences.cpp  Preferences.h  Types.cpp  Types.h
src/ui/: AiHistoryDialog.cpp  AiHistoryDialog.h  AiResultsDialog.cpp  AiResultsDialog.h  AnalyticsPage.cpp  AnalyticsPage.h  CalendarPage.cpp  CalendarPage.h  CategoryPieChart.cpp  CategoryPieChart.h  ChatPage.cpp  ChatPage.h  EventDialog.cpp  EventDialog.h  FontLoader.cpp  FontLoader.h  IconRenderer.cpp  IconRenderer.h  MainWindow.cpp  MainWindow.h  MonthView.cpp  MonthView.h  OnboardingDialog.cpp  OnboardingDialog.h  SettingsDialog.cpp  SettingsDialog.h  Sidebar.cpp  Sidebar.h  Theme.cpp  Theme.h  TimeGridView.cpp  TimeGridView.h
src/ui/widgets/: ComparisonWidget.cpp  ComparisonWidget.h  DailyTrendChart.cpp  DailyTrendChart.h  EmptyState.cpp  EmptyState.h  FlowLayout.cpp  FlowLayout.h  HorizontalBarChart.cpp  HorizontalBarChart.h  InsightsWidget.cpp  InsightsWidget.h  MotivationWidget.cpp  MotivationWidget.h  RhythmCardWidget.cpp  RhythmCardWidget.h  ShadowEffect.h  SourceDistributionWidget.cpp  SourceDistributionWidget.h  StatsCardsWidget.cpp  StatsCardsWidget.h
src/utils/: MarkdownToHtml.cpp  MarkdownToHtml.h
